# to-do-list

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
todolist/: alembic.ini  main.py
todolist/alembic/: env.py
todolist/alembic/versions/: e62311b66653_create_projects_and_tasks_tables.py
todolist/api/v1/: health.py  projects.py  tasks.py
todolist/commands/: autoclose_overdue.py  autoclose_scheduler.py
todolist/config/: settings.py
todolist/core/: errors.py  models.py  repository.py  services.py  utils.py
todolist/db/: base.py  session.py
todolist/interface/: cli.py  db_cli.py
todolist/models/: __init__.py  project.py  task.py
todolist/repositories/: base.py  sqlalchemy_project.py  sqlalchemy_task.py  task_repository.py
todolist/schemas/: project.py  task.py
