[tool.poetry]
name = "to-do-list"
version = "0.1.0"
description = ""
authors = ["ilya <ilyaravand@gmail.com>", "fateme <fateme.abolhassani91@gmail.com>"]
readme = "README.md"
packages = [{ include = "todolist" }]

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
sqlalchemy = ">=2.0"
alembic = "^1.17.2"
psycopg2-binary = ">=2.9"
schedule = "^1.2.1"
fastapi = "^0.124.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
todolist-cli = "todolist.interface.cli:main"
todolist-autoclose = "todolist.commands.autoclose_overdue:main"
todolist-db-cli = "todolist.interface.db_cli:main"
todolist-autoclose-scheduler = "todolist.commands.autoclose_scheduler:main"
todolist-api = "todolist.main:app"